moved prefix to .sty file, fixed some stuff

--- a/Principal.tex
+++ b/Principal.tex
@@ -1,12 +1,11 @@
-\input{prefix}
-\title{\Huge \textbf{Algoritmi e strutture dati}}
-\author{
-  Giacomo Fantoni \\
-  \small Telegram: \href{https://t.me/GiacomoFantoni}{@GiacomoFantoni} \\[3pt]
-  \small Github: \href{https://github.com/giacThePhantom/AlgoritmiStruttureDati}{https://github.com/giacThePhantom/AlgoritmiStruttureDati}}
+\documentclass[oneside]{book}
+
+\usepackage{prefix}
+
 \begin{document}
 \maketitle
 \tableofcontents
+
 \input{Chapters/01_Introduzione}
 \input{Chapters/02_Analisi}
 \input{Chapters/03_StruttureDati}
